--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -14,6 +14,9 @@
     column-gap: 20px;
     flex-wrap: wrap;
     flex-grow: 1;
+
+    width: 100%;
+    bottom: 0%;
 }
 
 .newsletter {
@@ -127,17 +130,18 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 20px;
+    color: white;
 }
 
 .fbIcon {
     color: white;
-};
+}
 
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
     .footer {
         display: flex;
-        background-color: red;
+        /* background-color: red; */
         flex-direction: column;
     }
 }
